# HR-AI-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: employees.csv
frontend/: index.html
src/: agent.py  app_modal.py  config.py  database.py  main.py  rag.py
